# rust-rpi-os

./: README.md
01_wait_forever/: Cargo.toml  Makefile  build.rs
01_wait_forever/src/: main.rs
01_wait_forever/src/_arch/aarch64/cpu/: boot.rs  boot.s
01_wait_forever/src/bsp/raspberrypi/: link.ld
02_runtime_init/: Cargo.toml  Makefile
02_runtime_init/src/: main.rs
02_runtime_init/src/_arch/aarch64/: cpu.rs
02_runtime_init/src/_arch/aarch64/cpu/: boot.s
02_runtime_init/src/bsp/raspberrypi/: cpu.rs  link.ld
03_hacky_hello_world/: Cargo.toml  Makefile
03_hacky_hello_world/src/_arch/aarch64/cpu/: boot.rs  boot.s
03_hacky_hello_world/src/bsp/raspberrypi/: console.rs  link.ld
common/tests/: boot_tst.rb  console_io_test.rb  dispatch.rb  exit_code_test.rb  test.io
