[package]
name = "mingo"
version = "0.2.0"
authors = ["auking45 <auking45@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[features]
default = []
bsp_rpi3 = []
bsp_rpi4 = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]

#[target.'cfg(target_arch = "aarch64")'.dependencies]
#cortex-a =  { version = "7.x.x" }
